--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 </head>
 <body>
     <div class="lover-card" tabindex="0">
-        <img src="WhatsApp Image 2025-11-02 at 17.09.05_ac89ce4e.jpg" alt="Lover's Photo" />
+        <img src="https://raw.githubusercontent.com/itzvanshpathania/bahi/refs/heads/main/WhatsApp%20Image%202025-11-02%20at%2017.09.05_ac89ce4e.jpg" alt="Lover's Photo" />
         <h2>Aman & Sruchi</h2>
         <div class="partner">Forever Together</div>
         <p>
@@ -123,4 +123,5 @@
     </div>
 </body>
 </html>
+
 
