--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 <body>
     <div class="lover-card" tabindex="0">
         <img src="https://raw.githubusercontent.com/itzvanshpathania/bahi/refs/heads/main/WhatsApp%20Image%202025-11-02%20at%2017.09.05_ac89ce4e.jpg" alt="Lover's Photo" />
-        <h2>Aman & Saruchi</h2>
+        <h2>Aman & Suruchi</h2>
         <div class="partner">Forever Together</div>
         <p>
             Two hearts beating as one, overcoming every challenge with love. Distance means nothing when souls are connected deeply.
@@ -123,6 +123,7 @@
     </div>
 </body>
 </html>
+
 
 
 
